STIJ-265: Added alignment fix for programme component.

--- a/components/41-organisms/programme/_programme.scss
+++ b/components/41-organisms/programme/_programme.scss
@@ -1,7 +1,6 @@
 .programme {
   > .inner-box {
-    padding-top: 4.8rem;
-    padding-bottom: 4rem;
+    padding: 4.8rem 2rem 4rem;
 
     &::before {
       @include spot-image('calendar');
